# multio

./: .clang-format  .gitignore  .readthedocs.yaml  AGENT.md  AUTHORS  CLAUDE.md  CMakeLists.txt  NOTICE  README.md  TODO  VERSION.cmake  concatJSON  format-sources.sh  multio.sublime-project  pyproject.toml
share/multio/average-rate/: CMakeLists.txt  average_rate_param_mappings.yml
share/multio/scalings/: CMakeLists.txt  local-to-wmo.yaml
share/multio/statistics-mtg2/: CMakeLists.txt  statistics_param_mappings.yml
share/multiom/: CMakeLists.txt  output-manager-cfg-an.yaml  output-manager-cfg-fc.yaml  output-manager-cfg.yaml
share/multiom/encodings/: CMakeLists.txt  encoding-rules-an.yaml  encoding-rules-ccsds-deterministic.yaml  encoding-rules-ccsds-ensemble.yaml  encoding-rules-ccsds-largeEnsemble.yaml  encoding-rules-ccsds-reforecast_ensemble.yaml  encoding-rules-complex-deterministic.yaml  encoding-rules-complex-ensemble.yaml  (+8 more)
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  DummySource.cc  DummySource.h  multiplexer.cc  mx.cc  readjournal.cc
src/ecom/: CMakeLists.txt  om_api_mod.F90
src/grib/: CMakeLists.txt  GribHandle.cc  GribHandle.h
src/ifs-output-manager/: CMakeLists.txt
src/multio/: CMakeLists.txt  DataSink.cc  DataSink.h  EncodeBitsPerValue.cc  EncodeBitsPerValue.h  FDB4.cc  FDB4.h  FDB4Sink.cc  FDB4Sink.h  FileSink.cc  FileSink.h  IOLogger.cc  IOLogger.h  IOStats.cc  IOStats.h  Journal.cc  Journal.h  JournalReader.cc  JournalReader.h  JournalRecord.cc  JournalRecord.h  LibMultio.cc  LibMultio.h  Metadata.cc  Metadata.h  MultIO.cc  MultIO.h  PlainDataBlob.cc  PlainDataBlob.h  SharableBuffer.h  Trigger.cc  Trigger.h  ifsio.c  ifsio.cc  ifsio.h  ifsio_internals.cc  ifsio_legacy.cc  multio_config.h.in  multio_version.cc.in  multio_version.h.in
src/multiom/: CMakeLists.txt  all_errflags.txt  filtered_errflags.txt  multiom_api.F90  replace.sh
src/multiplexer/: CMakeLists.txt  DataSink.cc  DataSink.h  DummySink.cc  DummySink.h  DummySource.cc  DummySource.h  MultiplexerSink.cc  MultiplexerSink.h  multiplexer.cc
src/sandbox/: Action.cc  Action.h  Aggregator.cc  Aggregator.h  CMakeLists.txt  Dispatcher.cc  Dispatcher.h  Field.cc  Field.h  Listener.cc  Listener.h  LocalIndices.cc  LocalIndices.h  Mappings.cc  Mappings.h  Message.cc  Message.h  MpiTransport.cc  MpiTransport.h  MultioServerTool.cc  MultioServerTool.h  MultioThreadTool.cc  MultioThreadTool.h  MultioTool.cc  MultioTool.h  Peer.cc  Peer.h  PlainDataBlob.h  Plan.cc  Plan.h  PlanConfigurations.h  PrintAction.cc  PrintAction.h  ScopedThread.h  SimpleTransport.cc  SimpleTransport.h  TcpTransport.cc  TcpTransport.h  TestData.h  ThreadTransport.cc  (+10 more)
src/tests/: CMakeLists.txt  test_multio_datasink_factory.cc  test_multio_multio.cc
src/tools/: CMakeLists.txt  multio-play-journal.cc  multio-read-journal.cc  multx.cc  playjournal.cc  readjournal.cc
tests/: CMakeLists.txt  TestDataBlob.h  TestDataContent.h  TestHelpers.h  multio-legacy.cc  multio-sink.cc  test_multio_capi.cc  test_multio_confctx.cc  test_multio_datasink_factory.cc  test_multio_encode_bitspervalue.cc  test_multio_fapi_general.f90  test_multio_file_sink.cc  test_multio_journal.cc  test_multio_maestro.cc  test_multio_multio.cc  test_multio_scoped_timer.cc
tests/across/: CMakeLists.txt  multiple_requests.diss  plan_multiple_requests.yaml  plan_single_request.yaml  single_request.diss
tests/action/: CMakeLists.txt  testEncodePlan.yaml  testIFSTestFC.yaml  testWrite.yaml
tests/actions/: CMakeLists.txt  testEncodePlan.yaml  testIFSTestFC.yaml  testNextGEMS.yaml  testPlan.yaml
tests/attic/: CMakeLists.txt  TestServerHelpers.h  create_random_data.h  test_multio_actions.cc  test_multio_atlas_field.cc  test_multio_create_all_plans.cc  test_multio_dispatcher.cc  test_multio_io_server_prototype.cc  test_multio_message.cc  test_multio_plan.cc  test_multio_plan_assembler.cc  test_multio_transport.cc
tests/ecom/: CMakeLists.txt
tests/metadataMappings/: grib1-ml-encoder-overwrites.yaml  grib1-pl-encoder-overwrites.yaml  grib1-sfc-encoder-overwrites.yaml  grib2-ml-encoder-overwrites.yaml
tests/multio/: CMakeLists.txt  MultioTestEnvironment.h  MultioTool.cc  TestDataContent.cc  TestDataContent.h  TestHelpers.h  expect-timeout.sh  multio-server.yaml  multio_example.cc  replay-nemo.sh  tcp-launch.sh  test_multio_adam.cc  test_multio_capi.cc  test_multio_conf.cc  test_multio_confctx.cc  test_multio_config_parser.cc  test_multio_data_modelling.cc  test_multio_data_modelling_containers.cc  test_multio_data_models.cc  test_multio_datamod.cc  test_multio_datamod_containers.cc  test_multio_datamod_models.cc  test_multio_datasink_factory.cc  test_multio_encode_bitspervalue.cc  test_multio_example.cc  test_multio_fapi_general.f90  test_multio_file_sink.cc  test_multio_grib2_producthandler.cc  test_multio_maestro.cc  test_multio_mask_compression.cc  test_multio_metadata.cc  test_multio_metadata_data_modelling.cc  test_multio_metadata_data_models.cc  test_multio_metadata_mapping.cc  test_multio_metadata_parametrization.cc  test_multio_multio.cc  test_multio_ringbuffer.cc  test_multio_select.cc  test_multio_step_meter.cc  test_multio_step_meter.sh  (+2 more)
tests/multiom/: CMakeLists.txt  convert_rules.py  output_manager_cfg.yaml  run.sh
tests/nextGEMS/: multio-model-configuration.sh  multio-server.yaml
tests/parameterMappings/: grib1-encoder-overwrites.yaml
tests/sandbox/: CMakeLists.txt  test_multio_sandbox_listener.cc  test_multio_sandbox_simple_transport.cc  test_multio_sandbox_thread_transport.cc  test_multio_sandbox_transport.cc
tests/server/: CMakeLists.txt  TestServerHelpers.h  create_random_data.h  ocean.tmpl  replay-nemo.sh  tcp-launch.sh  tcp_test.sh  test_multio_actions.cc  test_multio_atlas_field.cc  test_multio_create_all_plans.cc  test_multio_dispatcher.cc  test_multio_distributor.cc  test_multio_io_server_prototype.cc  test_multio_message.cc  test_multio_plan.cc  test_multio_plan_assembler.cc  test_multio_plan_factory.cc  test_multio_sandbox_listener.cc  test_multio_sandbox_transport.cc  test_multio_transport.cc  unstructured.tmpl
(+8701 files in other folders)
