# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# TODO migrate this to python/pymultio once the ci action is modular enough. Don't forget to update paths in:
# - license-files (symlink two dirs above)
# - testpaths (remove python/)
# - package-dir (remove python/)
# - version_file (remove python/)
# as well as .github/workflows/cd-pypi.yaml `working-directory` to point to python/pymultio (instead of default ./)

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -s"
testpaths = [
    "python/pymultio/tests"
]

[build-system]
requires = [ "setuptools>=65", "setuptools-scm>=8" ]
build-backend = "setuptools.build_meta"

[project]
name = "pymultio"
readme = "README.md"
description = "A Python interface to multio."
keywords = [ "multio", "multiopython", "tools" ]
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]

dynamic = [ "version" ]
dependencies = [
  "cffi",
  "pydantic",
  "pyyaml",
  "numpy",
  "findlibs",
  "multiolib",
]

optional-dependencies.all = [ "pymultio" ]

optional-dependencies.tests = [ "pytest", "pytest-cov", "pytest-flakes" ]

urls.Homepage = "https://github.com/ecmwf/multio/"
urls.Issues = "https://github.com/ecmwf/multio/issues"
urls.Repository = "https://github.com/ecmwf/multio/"


[tool.setuptools]
packages = ["multio"]
package-dir = { "multio" = "./python/pymultio/src/multio" }
include-package-data = true
zip-safe = true

[tool.setuptools_scm]
version_file = "./python/pymultio/src/multio/_version.py"

[tool.setuptools.package-data]
multio = ["*.h"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
