add_subdirectory( multio )

if ( HAVE_FORTRAN )
    if (NOT CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
        message(STATUS "Building multiom")
        add_subdirectory( multiom )
    else ()
        message(WARNING "Skipping multiom because the GNU Fortran compiler is too slow.")
    endif()
else()
    message(WARNING "Skipping multiom because Fortran is disabled.")
endif()
